Tue Sep 11 03:19:37 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/flint/flint_database.cc,backends/flint/flint_database.h:
	  Change flush_threshold from static to non-static, and set it for
	  each FlintWritableDatabase based on the value of the
	  XAPIAN_FLUSH_THRESHOLD environment variable at the time the
	  database was opened, instead of caching the value for each future
	  database which is opened.

Tue Sep 11 02:59:45 BST 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am: When running rst2html, use "--exit-status=warning"
	  rather than "--strict".  The former actually gives a non-zero exit
	  status for a warning or worse, while the former doesn't, but does
	  include any "info" messages in the output HTML.

Tue Sep 11 02:38:30 BST 2007  Olly Betts <olly@survex.com>

	* docs/deprecation.rst: Add "Database::positionlist_begin() throwing
	  RangeError".

Tue Sep 11 00:52:27 BST 2007  Olly Betts <olly@survex.com>

	* HACKING: Document a few more "coding standards".

Mon Sep 10 21:34:23 BST 2007  Olly Betts <olly@survex.com>

	* examples/delve.cc,examples/simpleexpand.cc,net/tcpserver.cc,
	  queryparser/queryparser.cc,queryparser/queryparser.lemony: Add more
	  missing "#include <string.h>" instances.

Mon Sep 10 20:24:25 BST 2007  Olly Betts <olly@survex.com>

	* net/serialise.cc: Add missing "#include <string.h>".

Sun Sep 09 15:38:11 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_spelling.h,backends/flint/flint_synonym.h,
	  backends/flint/flint_table.h: Fix typo (Z_DEFAULT_COMPRESSION
	  where it should be Z_DEFAULT_STRATEGY) which meant that zlib
	  compression wasn't enabled for the spelling or synonym tables.

Fri Sep 07 19:31:44 BST 2007  Olly Betts <olly@survex.com>

	* docs/spelling.rst: Fix typo.

Thu Sep 06 15:02:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/editdistance.cc: Fix off-by-one error in loop bounds when
	  setting up fkp array initially.  Fixes bug #194.