@@ -1,3 +1,11 @@
+Tue Sep 11 03:43:30 BST 2007  Olly Betts <olly@survex.com>
+
+	* backends/flint/flint_database.cc: Make sure flush_threshold gets
+	  initialised.
+	* backends/flint/flint_database.h: Change type of flush_threshold from
+	  `size_t' to `Xapian::doccount' for consistency with the type of
+	  changes_made.
+
 Tue Sep 11 03:19:37 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* backends/flint/flint_database.cc,backends/flint/flint_database.h:
